fix(sidepanel): blank space appears when the header has no content (#8029)
* fix(sidepanel): remove blankspace when header is empty

* refactor(sidepanel): selector updated

--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -351,6 +351,11 @@ $clabs-prefix: 'clabs';
     }
   }
 
+  // Remove min‑block‑size when the header contains no child elements to prevent unnecessary blank space
+  .#{$block-class}__header:empty {
+    min-block-size: unset;
+  }
+
   &.#{$block-class}:has(.#{$block-class}__action-toolbar),
   &.#{$block-class}--has-action-toolbar,
   &.#{$block-class}--has-slug,
