feat: add unit tests, accessibility fixes  , example for interstitial screen web component (#8015)
* fix: accessibility fixes

* test: add unit tests

* fix: include outside click and update carousel with doc gen comments

* fix: add example

* fix: assign internal slot names rather than appending to shadow dom

* fix: udpate export to match as done in utility

* fix: update example styles and link

* fix: update tests

* fix: review comments changes

--- a/packages/ibm-products-web-components/src/utilities/carousel/_index.scss
+++ b/packages/ibm-products-web-components/src/utilities/carousel/_index.scss
@@ -5,6 +5,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 @use '@carbon/styles/scss/motion' as *;
+@use '@carbon/styles/scss/utilities' as *;
 
 $prefix: 'carousel' !default;
 $animateTime: $duration-moderate-02;
@@ -62,6 +63,11 @@ $animateTime: $duration-moderate-02;
         transition: none;
       }
     }
+
+    :host(.#{$name}:focus),
+    .#{$name}:focus {
+      @include focus-outline('outline');
+    }
   }
 }
 
@@ -86,7 +92,7 @@ $animateTime: $duration-moderate-02;
 }
 
 /// Optional: Universal (Lit + React)
-@mixin carouselStyles {
+@mixin carousel {
   @include keyframes;
   @include wrapperStyles;
   @include viewStyles;
