--- a/packages/ibm-products-styles/src/components/Coachmark/_coachmark.scss
+++ b/packages/ibm-products-styles/src/components/Coachmark/_coachmark.scss
@@ -9,6 +9,8 @@
 @use '../../global/styles/project-settings' as c4p-settings;
 @use '../../global/styles/mixins';
 @use '@carbon/styles/scss/config';
+@use '@carbon/styles/scss/spacing' as *;
+@use '@carbon/styles/scss/theme' as *;
 
 @use './coachmark-dragbar';
 @use './coachmark-header';
@@ -42,5 +44,10 @@ $block-class-next: #{c4p-settings.$pkg-prefix}--coachmark__next;
     span:has(> div > .#{$block-class-next}--content-header--drag-icon) {
       margin-inline-end: auto;
     }
+  }
+  .#{$block-class-next}--content-header--is-dragging {
+    border-radius: 0;
+    box-shadow: 0 0 0 $spacing-02 $icon-inverse;
+    outline: $spacing-01 solid $background-inverse;
   }
 }
