--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
@@ -88,9 +88,11 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   > .#{$block-class}__groupConnector {
   margin-block-end: 0;
 }
-.#{$block-class}__readOnly {
+.#{$block-class}__readonly {
   .#{$block-class}__conditionInnerBlock,
   .#{$block-class}__connector,
+  .#{$block-class}__actionBlock,
+  .#{$block-class}__addActionButton,
   .#{$block-class}__groupConnector {
     border: 1px solid $border-subtle-00;
     background: transparent;
