--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderCondition.scss
@@ -88,20 +88,22 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   > .#{$block-class}__groupConnector {
   margin-block-end: 0;
 }
+
 .#{$block-class}__readonly {
   .#{$block-class}__condition-inner-block,
   .#{$block-class}__connector,
   .#{$block-class}__action-block,
   .#{$block-class}__add-action-button,
   .#{$block-class}__groupConnector {
-    border: 1px solid $border-subtle-00;
     background: transparent;
+    box-shadow: inset 0 0 0 1px $border-subtle-00;
 
     button {
       background: transparent;
+      cursor: default;
 
       svg {
-        color: $text-disabled;
+        color: $icon-disabled;
       }
     }
   }
