--- a/packages/ibm-products-web-components/src/components/checklist/checklist.scss
+++ b/packages/ibm-products-web-components/src/components/checklist/checklist.scss
@@ -23,3 +23,14 @@ $baseClass: #{$prefix}--checklist;
     margin-inline: auto calc(-1 * spacing.$spacing-03);
   }
 }
+
+:host(#{$prefix}-checklist-item) {
+  display: flex;
+  margin-block-end: spacing.$spacing-03;
+}
+
+// :host(#{$prefix}-checklist-group) {
+//   :host(#{$prefix}-checklist-item):last-of-type {
+//     margin-block-end: 0;
+//   }
+// }
