--- a/packages/ibm-products-web-components/src/components/checklist/checklist.scss
+++ b/packages/ibm-products-web-components/src/components/checklist/checklist.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2025, 2025
+// Copyright IBM Corp. 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -9,6 +9,8 @@ $css--plex: true !default;
 
 @use '@carbon/styles/scss/reset';
 @use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/theme';
+
 @use '@carbon/ibm-products-styles/scss/config';
 @use '@carbon/ibm-products-styles/scss/components/Checklist/index' as checklist;
 
@@ -29,8 +31,12 @@ $baseClass: #{$prefix}--checklist;
   margin-block-end: spacing.$spacing-03;
 }
 
-// :host(#{$prefix}-checklist-group) {
-//   :host(#{$prefix}-checklist-item):last-of-type {
-//     margin-block-end: 0;
-//   }
-// }
+.#{$baseClass}__label--clickable {
+  color: theme.$link-primary;
+  cursor: pointer;
+}
+
+.#{$baseClass}__label--clickable:hover {
+  color: theme.$link-primary-hover;
+  text-decoration: underline;
+}
