fix(Tearsheet): added styles to maintain header and footer button height integrity and hide the body container overflow

--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -208,8 +208,11 @@ $motion-duration: $duration-moderate-02;
     transform: scale(var(--#{$block-class}--stacking-scale-factor-double));
   }
 
+  .#{$block-class}__header {
+    min-block-size: fit-content;
+  }
+
   &.#{$block-class}--wide .#{$block-class}__header {
-    overflow: visible;
     padding: $spacing-06 $spacing-07;
     margin: 0;
     background-color: $layer;
@@ -311,6 +314,7 @@ $motion-duration: $duration-moderate-02;
 
   &.#{$block-class} .#{$block-class}__body {
     display: flex;
+    overflow: hidden;
     flex-direction: row;
     padding: 0;
     margin: 0;
@@ -418,6 +422,7 @@ $motion-duration: $duration-moderate-02;
   .#{$block-class}__button-container {
     grid-column: 1 / -1;
     grid-row: -1 / -1;
+    min-block-size: fit-content;
     overflow-x: auto;
     @supports (overflow-inline: auto) {
       /* stylelint-disable-next-line declaration-property-value-disallowed-list */
