fix: add wordbreak to sidepanel title

--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -61,6 +61,7 @@ $clabs-prefix: 'clabs';
   -webkit-line-clamp: 2;
   /* stylelint-disable-next-line carbon/layout-use -- custom css property set below */
   padding-inline-end: var(--#{$block-class}--title-padding-right);
+  word-break: break-all;
 }
 
 .#{$block-class}--scrolls {
