fix: update popover link in tagset and overflow

--- a/packages/ibm-products-styles/src/components/TagOverflow/_tag-overflow.scss
+++ b/packages/ibm-products-styles/src/components/TagOverflow/_tag-overflow.scss
@@ -100,12 +100,6 @@ $block-class-modal: #{$block-class}-modal;
     font-family: inherit;
   }
 
-  .#{$block-class-overflow}__show-all-tags-link.#{c4p-settings.$carbon-prefix}--link:visited {
-    display: inline-block;
-    margin: $spacing-03 0 $spacing-02; // to match the tags
-    color: $link-inverse;
-  }
-
   .#{c4p-settings.$carbon-prefix}--link:active,
   .#{c4p-settings.$carbon-prefix}--link:active:visited,
   .#{c4p-settings.$carbon-prefix}--link:active:visited:hover {
@@ -120,6 +114,18 @@ $block-class-modal: #{$block-class}-modal;
   .#{$block-class-overflow}__show-all-tags-link {
     color: $link-inverse;
     margin-block-start: $spacing-03;
+
+    &:hover {
+      color: $link-inverse-hover;
+    }
+
+    &:focus {
+      color: $focus-inverse;
+    }
+
+    &:visited {
+      color: $link-inverse;
+    }
   }
 
   .#{$block-class-overflow}__tag-item.#{$block-class-overflow}__tag-item--tag
