--- a/packages/ibm-products/src/patterns/DeleteAndRemove/_story-assets/_storybook-styles.scss
+++ b/packages/ibm-products/src/patterns/DeleteAndRemove/_story-assets/_storybook-styles.scss
@@ -6,9 +6,13 @@
 //
 
 @use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/config';
 
 .app {
   margin: spacing.$spacing-04;
+  .#{config.$prefix}--inline-loading {
+    min-block-size: unset;
+  }
 }
 
 .notification {
