--- a/packages/ibm-products-web-components/src/components/checklist/checklist.scss
+++ b/packages/ibm-products-web-components/src/components/checklist/checklist.scss
@@ -11,7 +11,7 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/spacing';
 @use '@carbon/styles/scss/theme';
 @use '@carbon/styles/scss/colors';
-
+@use '@carbon/styles/scss/components/tag';
 @use '@carbon/ibm-products-styles/scss/config';
 @use '@carbon/ibm-products-styles/scss/components/Checklist/index' as checklist;
 
@@ -46,7 +46,6 @@ $baseClass: #{$prefix}--checklist;
   border-radius: 50%;
   background-image: conic-gradient(
     colors.$purple-50 var(--#{$prefix}-num-degrees),
-    var(--#{$carbon-prefix}-tag-background-gray) var(--#{$prefix}-num-degrees)
-      360deg
+    tag.$tag-background-gray var(--#{$prefix}-num-degrees) 360deg
   );
 }
