feat(CoachmarkFixed): implemented as patterns (#8221)
* feat(CoachmarkFixed): implemented as patterns

* feat(CoachmarkFixed): implemented as patterns

* feat(CoachmarkTagline): add index.ts

* feat(CoachmarkFixed): exported with the preview__ prefix

* feat(CoachmarkFixed): exported with the preview__ prefix

--- a/packages/ibm-products/src/global/js/utils/carousel/_index.scss
+++ b/packages/ibm-products/src/global/js/utils/carousel/_index.scss
@@ -78,6 +78,7 @@ $animateTime: $duration-moderate-02;
     overflow: hidden;
     block-size: 100%;
     inline-size: 100%;
+    min-inline-size: 20vh;
   }
 }
 
