--- a/packages/ibm-products-web-components/src/components/checklist/checklist.scss
+++ b/packages/ibm-products-web-components/src/components/checklist/checklist.scss
@@ -32,6 +32,20 @@ $baseClass: #{$prefix}--checklist;
   margin-block-end: spacing.$spacing-03;
 }
 
+:host(#{$prefix}-checklist-item:last-of-type) {
+  margin-block-end: 0;
+}
+
+:host(#{$prefix}-checklist-group) {
+  display: block;
+  padding: spacing.$spacing-05;
+  border-block-start: 1px solid theme.$border-subtle-01;
+}
+
+:host(#{$prefix}-checklist-group:first-of-type) {
+  border-block-start: none;
+}
+
 .#{$baseClass}__label--clickable {
   color: theme.$link-primary;
   cursor: pointer;
