feat: tearsheet v2 initial changes

--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -22,6 +22,8 @@
 // ActionSet
 @use '../ActionSet/action-set';
 
+@use './tearsheet_next';
+
 $block-class: #{$pkg-prefix}--tearsheet;
 
 // stylelint-disable-next-line carbon/theme-use
