--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -330,8 +330,8 @@
 
   .#{$block-class}-filter-panel
     + .#{$block-class}__table-container-inner
-    .#{c4p-settings.$carbon-prefix}--data-table-content {
-    block-size: fit-content;
+    .#{c4p-settings.$carbon-prefix}--pagination {
+    background-color: $layer-02;
   }
 
   table.#{$block-class}__table-simple {
@@ -660,6 +660,10 @@
 
   .#{c4p-settings.$pkg-prefix}--datagrid__table-simple {
     block-size: 100%;
+  }
+
+  .#{c4p-settings.$carbon-prefix}--data-table-content {
+    block-size: fit-content;
   }
 }
 
