chore(storybook): use theme tokens for sb doc previews

--- a/packages/ibm-products-web-components/.storybook/_container.scss
+++ b/packages/ibm-products-web-components/.storybook/_container.scss
@@ -79,3 +79,11 @@ body {
   block-size: 100vh;
   inline-size: 100%;
 }
+
+.docs-story {
+  background-color: theme.$background;
+}
+
+.docs-story > *:has(> .docblock-code-toggle) {
+  background-color: theme.$background;
+}
