--- a/packages/ibm-products/.storybook/index.scss
+++ b/packages/ibm-products/.storybook/index.scss
@@ -65,3 +65,11 @@ body {
 .docblock-argstable-head ~ .docblock-argstable-body p {
   @include styles.type-style('body-01');
 }
+
+.docs-story {
+  background: styles.$background;
+}
+
+.docs-story > *:has(> .docblock-code-toggle) {
+  background-color: styles.$background;
+}
